Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -14,7 +14,7 @@ interface Ethernet1
    l2 mtu 8000
    l2 mru 8000
    bgp session tracker ST1
-   no switchport
+   switchport
    switchport access vlan 200
    switchport trunk native vlan tag
    switchport phone vlan 110
@@ -99,7 +99,7 @@ interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE2_Ethernet2
    mtu 1500
    switchport mode trunk
-   no switchport
+   switchport
    switchport trunk native vlan 5
    switchport vlan translation out 23 dot1q-tunnel 50
    no snmp trap link-change
@@ -125,7 +125,7 @@ interface Ethernet4
    description Molecule IPv6
    shutdown
    mtu 9100
-   no switchport
+   switchport
    snmp trap link-change
    ipv6 enable
    ipv6 address 2020::2020/64
@@ -148,7 +148,7 @@ interface Ethernet5
    description Molecule Routing
    no shutdown
    mtu 9100
-   no switchport
+   switchport
    switchport access vlan 220
    ip ospf cost 99
    ip ospf network point-to-point
