--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -10,7 +10,7 @@ ethernet_interfaces:
     mtu: 1500
     l2_mtu: 8000
     l2_mru: 8000
-    type: routed
+    type: switched
     ip_address: 172.31.255.1/31
     link_tracking_groups:
       - name: EVPN_MH_ES1
@@ -180,14 +180,13 @@ ethernet_interfaces:
       backup_link:
         prefer_vlan: 20
 
-
   - name: Ethernet3
     peer: DC1-SPINE2
     peer_interface: Ethernet2
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE2_Ethernet2
     mtu: 1500
-    type: routed
+    type: switched
     ip_address: 172.31.128.1/31
     snmp_trap_link_change: false
     link_tracking_groups:
@@ -234,7 +233,7 @@ ethernet_interfaces:
         interface: Ethernet4
 
   - name: Ethernet4
-    type: routed
+    type: switched
     description: Molecule IPv6
     shutdown: true
     mtu: 9100
@@ -271,7 +270,7 @@ ethernet_interfaces:
     description: Molecule Routing
     shutdown: false
     mtu: 9100
-    type: routed
+    type: switched
     ospf_network_point_to_point: true
     ospf_area: 100
     ospf_cost: 99
