--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ ignore = [
   "PD011",   # Use numpy instead of .values - False positive
   "BLE001",  # Do not catch blind exception: `Exception - TODO: Improve code
   "PLR2004", # Magic value used in comparison - TODO: Evaluate
+  "DTZ005",  # `datetime.datetime.now()` called without a `tz` argument - TODO: Improve code
 ]
 
 [tool.ruff.lint.pydocstyle]
@@ -60,15 +61,22 @@ convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
 "ansible_collections/arista/avd/plugins/*/*.py" = [
-  "E402",  # Ansible plugins require a layout with imports below the docs
+  "E402",    # Ansible plugins require a layout with imports below the docs
+  "INP001",  # implicit namespace package. Add an `__init__.py` - Ansible plugins are not in packages
+]
+"ansible_collections/arista/avd/roles/eos_validate_state/python_modules/**/*.py" = [
+  "INP001",  # implicit namespace package. Add an `__init__.py` - Will be fixed once moved to PyAVD
 ]
 "python-avd/scripts/**/*.py" = [
   "T201",  # Interactive scripts can have print
 ]
+"python-avd/pyavd/_cv/client/*.py" = [
+  "B904",  # Within an `except` clause, raise exceptions with `raise - TODO: Improve code
+]
 
 [tool.ruff.lint.pylint]
-max-args = 10
-max-branches = 30
+max-args = 12
+max-branches = 40
 max-returns = 10
 max-statements = 100
 
