--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -80,11 +80,17 @@ version = {attr = "pyavd.__version__"}
 [tool.black]
 line-length = 160
 
+force-exclude = '''pyavd/_cv/api/.*'''
+
 [tool.isort]
 profile = "black"
 skip_gitignore = true
 line_length = 160
 known_first_party = ["pyavd", "schema_tools"]
+
+extend_skip_glob = [
+  "pyavd/_cv/api/**/*"
+]
 
 [tool.coverage.run]
 branch = true
