--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [tool.black]
+# Black has been replaced with Ruff.
+# This section should be removed later, but kept here to avoid IDE extensions from messing up the code.
 line-length = 160
-
 force-exclude = '''python-avd/pyavd/_cv/api/.*'''
 
 [tool.isort]
-
+# Isort has been replaced with Ruff.
+# This section should be removed later, but kept here to avoid IDE extensions from messing up the code.
 extend_skip_glob = [
   "python-avd/pyavd/_cv/api/**/*"
 ]
-
 profile = "black"
 skip_gitignore = true
 line_length = 160
-
 known_first_party = ["pyavd", "schema_tools"]
 
 [tool.ruff]
