Deprecating switchport vars from port-channel-interfaces with test-cases and updated doc template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -60,7 +60,6 @@ interface Port-Channel8.101
 !
 interface Port-Channel9
    no switchport
-   switchport access vlan 220
    spanning-tree guard root
    ip address 10.9.2.3/31
    bfd interval 500 min-rx 500 multiplier 5
@@ -111,7 +110,6 @@ interface Port-Channel15
    switchport
    switchport trunk allowed vlan 110,201
    switchport mode trunk
-   no switchport trunk private-vlan secondary
    mlag 15
    spanning-tree guard loop
    link tracking group EVPN_MH_ES2 upstream
@@ -119,11 +117,18 @@ interface Port-Channel15
 interface Port-Channel16
    description DC1_L2LEAF4_Po1
    switchport
+   switchport trunk native vlan 10
+   switchport dot1q vlan tag disallowed
    switchport trunk allowed vlan 110,201
    switchport mode trunk
+   no switchport
+   switchport vlan translation out 23 dot1q-tunnel 22
    snmp trap link-change
    mlag 16
+   switchport port-security violation protect log
+   switchport port-security mac-address maximum 100
    spanning-tree guard none
+   switchport backup-link Port-Channel100.102 prefer vlan 20
 !
 interface Port-Channel17
    description PBR Description
@@ -135,6 +140,7 @@ interface Port-Channel20
    description Po_in_mode_access_accepting_tagged_LACP_frames
    switchport
    switchport access vlan 200
+   switchport mode access
    l2-protocol encapsulation dot1q vlan 200
 !
 interface Port-Channel50
@@ -152,6 +158,12 @@ interface Port-Channel51
    switchport
    switchport trunk allowed vlan 1-500
    switchport mode trunk
+   switchport port-security
+   no switchport port-security mac-address maximum disabled
+   switchport port-security vlan 1 mac-address maximum 3
+   switchport port-security vlan 2 mac-address maximum 3
+   switchport port-security vlan 3 mac-address maximum 3
+   switchport port-security vlan default mac-address maximum 2
    ipv6 nd prefix a1::/64 infinite infinite no-autoconfig
 !
 interface Port-Channel99
@@ -167,7 +179,7 @@ interface Port-Channel99
 !
 interface Port-Channel100
    logging event link-status
-   no switchport
+   switchport
    switchport access vlan 200
    switchport trunk native vlan tag
    switchport phone vlan 110
@@ -207,14 +219,7 @@ interface Port-Channel100.101
    logging event link-status
    mtu 1500
    encapsulation dot1q vlan 101
-   switchport trunk native vlan 10
-   switchport dot1q vlan tag disallowed
-   no switchport
-   switchport vlan translation out 23 dot1q-tunnel 22
-   switchport port-security violation protect log
-   switchport port-security mac-address maximum 100
    ip address 10.1.1.3/31
-   switchport backup-link Port-Channel100.102 prefer vlan 20
 !
 interface Port-Channel100.102
    description IFL for TENANT02
@@ -222,12 +227,6 @@ interface Port-Channel100.102
    logging event storm-control discards
    mtu 1500
    encapsulation dot1q vlan 102
-   switchport port-security
-   no switchport port-security mac-address maximum disabled
-   switchport port-security vlan 1 mac-address maximum 3
-   switchport port-security vlan 2 mac-address maximum 3
-   switchport port-security vlan 3 mac-address maximum 3
-   switchport port-security vlan default mac-address maximum 2
    vrf C2
    ip address 10.1.2.3/31
 !
@@ -235,6 +234,7 @@ interface Port-Channel101
    description PVLAN Promiscuous Access - only one secondary
    switchport
    switchport access vlan 110
+   switchport mode access
    switchport pvlan mapping 111
    no qos trust
 !
@@ -243,10 +243,6 @@ interface Port-Channel102
    switchport
    switchport trunk allowed vlan 110-112
    switchport mode trunk
-   switchport vlan translation 120 130
-   switchport vlan translation in 113 115
-   switchport vlan translation out 111-112 110
-   switchport vlan translation 12 20
 !
 interface Port-Channel103
    description PVLAN Secondary Trunk
@@ -289,6 +285,7 @@ interface Port-Channel109
    description Molecule ACLs
    switchport
    switchport access vlan 110
+   switchport mode access
    ip access-group IPV4_ACL_IN in
    ip access-group IPV4_ACL_OUT out
    ipv6 access-group IPV6_ACL_IN in
@@ -403,6 +400,7 @@ interface Port-Channel120
 interface Port-Channel121
    description access_port_with_no_vlans
    switchport
+   switchport mode access
 !
 interface Port-Channel122
    description trunk_port_with_no_vlans
