--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -157,37 +157,31 @@ interface Port-Channel1
    lacp system-id 0303.0202.0101
 !
 interface Port-Channel2
-   description Flexencap Port-Channel
-   no switchport
-!
-interface Port-Channel2.1000
-   description L2 Subinterface
-   vlan id 1000
-   encapsulation vlan
-      client dot1q 100 network client
-   evpn ethernet-segment
-      identifier 0000:0000:0303:0202:0101
-      route-target import 03:03:02:02:01:01
-   lacp system-id 0303.0202.0101
-!
-interface Port-Channel30
-   description deprecate_filters_testing
    switchport
-   evpn ethernet-segment
-      identifier deaf:beed:0303:0202:0101
-      route-target import 03:03:02:02:01:01
-   lacp system-id 0303.0202.0101
+   switchport access vlan 100
 !
-interface Port-Channel51
-   description ipv6_prefix
+interface Port-Channel3
    switchport
-   switchport trunk allowed vlan 1-500
+   switchport trunk allowed vlan 110
+   switchport trunk native vlan 10
    switchport mode trunk
-   ipv6 nd prefix a1::/64 infinite infinite no-autoconfig
+   switchport trunk group group1
+   switchport trunk group group2
 !
-interface Port-Channel100
-   logging event link-status
-   no switchport
+interface Port-Channel4
+   switchport
+   switchport trunk native vlan tag
+   switchport phone vlan 20
+   switchport phone trunk tagged
+   switchport mode trunk phone
+!
+interface Port-Channel5
+   switchport
+   switchport trunk private-vlan secondary
+   switchport pvlan mapping 2,3,4
+   switchport vlan translation in 23 50
+   switchport vlan translation out 25 49
+   switchport vlan translation 34 60
 !
 interface Ethernet1
    switchport access vlan 100
