--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -3,11 +3,13 @@
 port_channel_interfaces:
   - name: Port-Channel5
     description: DC1_L2LEAF1_Po1
-    vlans: 110,201
     link_tracking_groups:
       - name: EVPN_MH_ES1
         direction: downstream
-    mode: trunk
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 110,201
     mlag: 5
     storm_control:
       broadcast:
@@ -52,38 +54,64 @@ port_channel_interfaces:
       version: 2
   - name: Port-Channel15
     description: DC1_L2LEAF3_Po1
-    trunk_private_vlan_secondary: false
-    vlans: 110,201
     link_tracking_groups:
       - name: EVPN_MH_ES2
         direction: upstream
-    mode: trunk
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 110,201
+        private_vlan_secondary: false
     mlag: 15
     spanning_tree_guard: loop
 
   - name: Port-Channel16
     description: DC1_L2LEAF4_Po1
-    vlans: 110,201
-    mode: trunk
     snmp_trap_link_change: true
     mlag: 16
     spanning_tree_guard: disabled
+    switchport:
+      mode: trunk
+      port_security:
+        mac_address_maximum:
+          limit: 100
+        violation:
+          mode: protect
+          protect_log: true
+      enabled: false
+      trunk:
+        native_vlan: 10
+        allowed_vlan: 110,201
+      dot1q:
+        vlan_tag: disallowed
+      vlan_translations:
+        direction_out:
+          - from: 23
+            dot1q_tunnel:
+              to: 22
+      backup_link:
+        interface: Port-Channel100.102
+        prefer_vlan: 20
 
   - name: Port-Channel3
     description: MLAG_PEER_DC1-LEAF1B_Po3
-    vlans: "2-4094"
-    mode: trunk
     snmp_trap_link_change: false
     shape:
       rate: 200000 kbps
-    trunk_groups:
-      - LEAF_PEER_L3
-      - MLAG
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: "2-4094"
+        groups:
+          - LEAF_PEER_L3
+          - MLAG
 
   - name: Port-Channel10
     description: SRV01_bond0
-    vlans: 2-3000
-    mode: trunk
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 2-3000
     evpn_ethernet_segment:
       identifier: "0000:0000:0404:0404:0303"
       route_target: "04:04:03:03:02:02"
@@ -92,8 +120,10 @@ port_channel_interfaces:
 
   - name: Port-Channel50
     description: SRV-POD03_PortChanne1
-    vlans: 1-4000
-    mode: trunk
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 1-4000
     evpn_ethernet_segment:
       identifier: "0000:0000:0303:0202:0101"
       route_target: "03:03:02:02:01:01"
@@ -101,8 +131,20 @@ port_channel_interfaces:
 
   - name: Port-Channel51
     description: ipv6_prefix
-    vlans: 1-500
-    mode: trunk
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 1-500
+      port_security:
+        mac_address_maximum:
+          disabled: false
+        violation:
+          mode: shutdown
+        vlan_default_mac_address_maximum: 2
+        vlans:
+          - range: 1-3
+            mac_address_maximum: 3
+          - range: 4-5
     ipv6_nd_prefixes:
       - ipv6_prefix: a1::/64
         valid_lifetime: infinite
@@ -110,7 +152,7 @@ port_channel_interfaces:
         no_autoconfig_flag: true
 
   - name: Port-Channel100
-    type: routed
+    type: switched
     logging:
       event:
         link_status: true
@@ -191,26 +233,6 @@ port_channel_interfaces:
     mtu: 1500
     ip_address: 10.1.1.3/31
     encapsulation_dot1q_vlan: 101
-    switchport:
-      port_security:
-        mac_address_maximum:
-          limit: 100
-        violation:
-          mode: protect
-          protect_log: true
-      enabled: false
-      trunk:
-        native_vlan: 10
-      dot1q:
-        vlan_tag: disallowed
-      vlan_translations:
-        direction_out:
-          - from: 23
-            dot1q_tunnel:
-              to: 22
-      backup_link:
-        interface: Port-Channel100.102
-        prefer_vlan: 20
 
   - name: Port-Channel100.102
     type: l3dot1q
@@ -220,17 +242,6 @@ port_channel_interfaces:
         storm_control_discards: true
     description: IFL for TENANT02
     mtu: 1500
-    switchport:
-      port_security:
-        mac_address_maximum:
-          disabled: false
-        violation:
-          mode: shutdown
-        vlan_default_mac_address_maximum: 2
-        vlans:
-          - range: 1-3
-            mac_address_maximum: 3
-          - range: 4-5
     ip_address: 10.1.2.3/31
     vrf: C2
     encapsulation_dot1q_vlan: 102
@@ -243,6 +254,7 @@ port_channel_interfaces:
       port_security:
         violation:
           mode: protect
+
   - name: Port-Channel8.101
     description: to Dev02 Port-Channel8.101 - VRF-C1
     type: l3dot1q
@@ -262,25 +274,26 @@ port_channel_interfaces:
         enabled: true
         rfc_7130: true
     spanning_tree_guard: root
-    switchport:
-      access_vlan: 220
 
   - name: Port-Channel20
     description: Po_in_mode_access_accepting_tagged_LACP_frames
     type: switched
-    mode: access
-    vlans: 200
+    switchport:
+      mode: access
+      access_vlan: 200
     l2_protocol:
       encapsulation_dot1q_vlan: 200
 
   - name: Port-Channel12
     description: interface_in_mode_access_with_voice
     type: switched
-    native_vlan: 100
-    mode: "trunk phone"
-    phone:
-      trunk: untagged
-      vlan: 70
+    switchport:
+      mode: "trunk phone"
+      trunk:
+        native_vlan: 100
+      phone:
+        trunk: untagged
+        vlan: 70
 
   - name: Port-Channel13
     description: EVPN-Vxlan single-active redundancy
@@ -328,40 +341,34 @@ port_channel_interfaces:
 
   - name: Port-Channel101
     description: PVLAN Promiscuous Access - only one secondary
-    mode: access
-    vlans: 110
-    pvlan_mapping: 111
+    switchport:
+      mode: access
+      access_vlan: 110
+      pvlan_mapping: 111
     qos:
       trust: disabled
 
   - name: Port-Channel102
     description: PVLAN Promiscuous Trunk - vlan translation out
-    mode: trunk
-    vlans: 110-112
-    vlan_translations:
-      - from: 12
-        to: 20
-      - direction: out
-        from: 111-112
-        to: 110
-      - direction: in
-        from: 113
-        to: 115
-      - direction: both
-        from: 120
-        to: 130
-      - direction: in
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 110-112
 
   - name: Port-Channel103
     description: PVLAN Secondary Trunk
-    mode: trunk
-    vlans: 110-112
-    trunk_private_vlan_secondary: true
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 110-112
+        private_vlan_secondary: true
 
   - name: Port-Channel104
     description: LACP fallback individual
-    mode: trunk
-    vlans: 112
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 112
     lacp_fallback_timeout: 300
     lacp_fallback_mode: individual
 
@@ -387,8 +394,9 @@ port_channel_interfaces:
 
   - name: Port-Channel109
     description: Molecule ACLs
-    mode: access
-    vlans: 110
+    switchport:
+      mode: access
+      access_vlan: 110
     access_group_in: IPV4_ACL_IN
     access_group_out: IPV4_ACL_OUT
     ipv6_access_group_in: IPV6_ACL_IN
@@ -412,12 +420,14 @@ port_channel_interfaces:
   - name: Port-Channel111
     description: Flexencap Port-Channel
     type: routed
+
   - name: Port-Channel111.1
     type: l2dot1q
     description: TENANT_A pseudowire 1 interface
     encapsulation_vlan:
       client:
         unmatched: true
+
   - name: Port-Channel111.100
     type: l2dot1q
     description: TENANT_A pseudowire 2 interface
@@ -427,6 +437,7 @@ port_channel_interfaces:
           vlan: 100
       network:
         client: true
+
   - name: Port-Channel111.200
     type: l2dot1q
     description: TENANT_A pseudowire 3 interface
@@ -434,6 +445,7 @@ port_channel_interfaces:
       client:
         dot1q:
           vlan: 200
+
   - name: Port-Channel111.300
     type: l2dot1q
     description: TENANT_A pseudowire 4 interface
@@ -444,6 +456,7 @@ port_channel_interfaces:
       network:
         dot1q:
           vlan: 400
+
   - name: Port-Channel111.400
     type: l2dot1q
     description: TENANT_A pseudowire 3 interface
@@ -456,6 +469,7 @@ port_channel_interfaces:
         dot1q:
           outer: 401
           inner: 21
+
   - name: Port-Channel111.1000
     type: l2dot1q
     description: L2 Subinterface
@@ -473,8 +487,10 @@ port_channel_interfaces:
 
   - name: Port-Channel112
     description: LACP fallback individual
-    mode: trunk
-    vlans: 112
+    switchport:
+      mode: trunk
+      trunk:
+        allowed_vlan: 112
     lacp_fallback_timeout: 5
     lacp_fallback_mode: individual
 
@@ -499,9 +515,11 @@ port_channel_interfaces:
 
   - name: Port-Channel115
     description: native-vlan-tag-precedence
-    native_vlan_tag: true
-    native_vlan: 100
-    mode: trunk
+    switchport:
+      trunk:
+        native_vlan_tag: true
+        native_vlan: 100
+      mode: trunk
 
   - name: Port-Channel117
     description: interface_with_sflow_ingress_egress_enabled
@@ -538,12 +556,14 @@ port_channel_interfaces:
   - name: Port-Channel121
     description: access_port_with_no_vlans
     type: switched
-    mode: access
+    switchport:
+      mode: access
 
   - name: Port-Channel122
     description: trunk_port_with_no_vlans
     type: switched
-    mode: trunk
+    switchport:
+      mode: trunk
 
   - name: Port-Channel130
     description: IP NAT Testing
@@ -567,8 +587,9 @@ port_channel_interfaces:
   - name: Port-Channel131
     description: dot1q-tunnel mode
     type: switched
-    mode: dot1q-tunnel
-    vlans: 115
+    switchport:
+      mode: dot1q-tunnel
+      access_vlan: 115
 
 # Children interfaces
 ethernet_interfaces:
