updated the example inventoory

--- a/ansible_collections/arista/avd/molecule/eos_designs-twodc-5stage-clos/inventory/group_vars/DC2_POD1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-twodc-5stage-clos/inventory/group_vars/DC2_POD1.yml
@@ -84,7 +84,7 @@ l3leaf:
 # In DC2 we define all variables via defaults if possible
 l2leaf:
   defaults:
-    inband_management_subnet: 172.21.210.0/24
+    inband_mgmt_subnet: 172.21.210.0/24
     platform: vEOS-LAB
     uplink_interfaces: [ Ethernet1 ]
     spanning_tree_mode: mstp
