--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -767,6 +767,23 @@ interface Ethernet70
    dot1x aaa unresponsive eap response success
    dot1x mac based access-list
 !
+interface Ethernet71
+   description dot1x_aaa_unresponsive1
+   no shutdown
+   switchport
+   dot1x aaa unresponsive phone action apply cached-results timeout 10 hours
+   dot1x aaa unresponsive action traffic allow vlan 10 access-list acl1
+   dot1x aaa unresponsive eap response success
+   dot1x mac based access-list
+!
+interface Ethernet72
+   description dot1x_aaa_unresponsive2
+   no shutdown
+   switchport
+   dot1x aaa unresponsive action traffic allow vlan 10 access-list acl1
+   dot1x aaa unresponsive eap response success
+   dot1x mac based access-list
+!
 interface Management1
    description oob_management
    vrf MGMT
