--- a/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/intended/configs/host2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/intended/configs/host2.cfg
@@ -11,38 +11,20 @@ hostname host2
 no enable password
 no aaa root
 !
-vlan 111
-   name Tenant_A_OP_Zone_2
-!
-vlan 160
-   name Tenant_A_VMOTION
-!
 vrf instance MGMT
-!
-vrf instance TENANT_B_WAN
 !
 interface Loopback0
    description MPLS_Overlay_peering
    no shutdown
    ip address 10.42.0.102/32
-!
-interface Vlan111
-   description Tenant_A_OP_Zone_2
-   no shutdown
-   vrf TENANT_B_WAN
-   ip helper-address 1.1.1.1 vrf MGMT source-interface lo100
+   isis enable CORE
+   isis passive
+   node-segment ipv4 index 102
 !
 ip virtual-router mac-address 00:1c:73:00:dc:01
 !
 ip routing
 no ip routing vrf MGMT
-ip routing vrf TENANT_B_WAN
-!
-ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 10.42.0.0/24 eq 32
-!
-route-map RM-CONN-2-BGP permit 10
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -52,24 +34,34 @@ router bgp 102
    maximum-paths 4 ecmp 4
    update wait-install
    no bgp default ipv4-unicast
-   neighbor IPv4-UNDERLAY-PEERS peer group
-   neighbor IPv4-UNDERLAY-PEERS send-community
-   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 102
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
-   redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
-      neighbor default encapsulation mpls
-      neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
-      neighbor IPv4-UNDERLAY-PEERS activate
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   address-family vpn-ipv4
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
+!
+router isis CORE
+   is-type level-2
+   router-id ipv4 10.42.0.102
+   log-adjacency-changes
+   !
+   address-family ipv4 unicast
+      maximum-paths 4
+   !
+   segment-routing mpls
+      no shutdown
+!
+mpls ip
 !
 management api http-commands
    protocol https
