Fix(eos_cli_config_gen): Fix router_isis rx_disabled and mode: shared-secret (#4267)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis-new.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis-new.cfg
@@ -66,29 +66,31 @@ interface Vlan4094
    ip address 10.255.252.0/31
 !
 router isis EVPN_UNDERLAY
-   net 49.0001.0001.0001.0001.00
-   is-type level-2
+   redistribute connected
    redistribute isis instance route-map RM-REDIS-ISIS-INSTANCE
    redistribute ospf match internal
    redistribute ospf match external route-map RM-OSPF-EXTERNAL-TO-ISIS
    redistribute ospf include leaked match nssa-external route-map RM-OSPF-NSSA_EXT-TO-ISIS
+   redistribute ospfv3 match external
    redistribute static include leaked route-map RM-STATIC-TO-ISIS
-   router-id ipv4 192.168.255.4
-   log-adjacency-changes
+   no log-adjacency-changes
    mpls ldp sync default
-   timers local-convergence-delay 15000 protected-prefixes
-   set-overload-bit on-startup wait-for-bgp timeout 10
+   timers local-convergence-delay protected-prefixes
+   set-overload-bit
    advertise passive-only
    spf-interval 250 seconds 10 milliseconds 20 milliseconds
-   authentication mode md5 level-1
+   authentication mode shared-secret profile test1 algorithm md5 level-1
    authentication mode sha key-id 2 level-2
    graceful-restart
    graceful-restart t2 level-1 10
    graceful-restart t2 level-2 20
    graceful-restart restart-hold-time 10
    authentication key-id 2 algorithm sha-512 key 0 password
-   authentication key-id 1 algorithm sha-1 rfc-5310 key 0 password level-1
-   authentication key-id 1 algorithm sha-1 rfc-5310 key 0 password level-2
+   authentication key-id 3 algorithm sha-512 rfc-5310 key 0 password1
+   authentication key-id 1 algorithm sha-1 key 0 password level-1
+   authentication key-id 4 algorithm sha-1 rfc-5310 key 0 password level-1
+   authentication key-id 1 algorithm sha-1 key 0 password level-2
+   authentication key-id 5 algorithm sha-1 rfc-5310 key 0 password level-2
    authentication key 0 password level-1
    authentication key 0 password level-2
    !
@@ -100,10 +102,8 @@ router isis EVPN_UNDERLAY
       fast-reroute ti-lfa srlg strict
    !
    address-family ipv6 unicast
-      maximum-paths 4
-      bfd all-interfaces
-      fast-reroute ti-lfa mode node-protection
-      fast-reroute ti-lfa srlg
+      fast-reroute ti-lfa mode node-protection level-1
+      fast-reroute ti-lfa srlg strict
    !
    segment-routing mpls
       no shutdown
