--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -145,6 +145,8 @@ router-bgp-vrf-lite
 router-general
 router-isis
 router-isis-new
+router-isis-1
+router-isis-2
 router-l2-vpn
 router-msdp
 router-multicast
