--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
@@ -237,45 +237,58 @@ interface Vlan339
    ipv6 nd other-config-flag
 !
 interface Vlan340
-   description isis authentication text
-   isis authentication mode text
-   isis authentication key 7 asfddja23452
+   description isis authentication both md5 rx
+   authentication mode md5 rx-disabled
 !
 interface Vlan341
-   description isis authentication sha1
-   isis authentication mode sha key-id 1000 rx-disabled
+   description isis authentication both md5
+   authentication mode md5
 !
 interface Vlan342
-   description isis authentication sha2
-   isis authentication mode sha key-id 1001
+   description isis authentication both sha rx
+   authentication mode sha key-id 2 rx-disabled
 !
 interface Vlan343
-   description isis authentication sha3
-   isis authentication mode sha key-id 1010 level-1 rx-disabled
-   isis authentication mode sha key-id 1010 level-2 rx-disabled
+   description isis authentication both sha
+   authentication mode sha key-id 2
 !
 interface Vlan344
-   description isis authentication sha4
-   isis authentication mode sha key-id 1011 level-1
-   isis authentication mode sha key-id 1011 level-2
+   description isis authentication both shared secret rx
+   authentication mode shared-secret profile profile1 algorithm sha-1 rx-disabled
 !
 interface Vlan345
-   description isis authentication shared-secret1
-   isis authentication mode shared-secret profile profile1 algorithm sha-1 rx-disabled level-1
-   isis authentication mode shared-secret profile profile1 algorithm md5 rx-disabled level-2
+   description isis authentication both shared secret
+   authentication mode shared-secret profile profile1 algorithm sha-1
 !
 interface Vlan346
-   description isis authentication shared-secret1
-   isis authentication mode shared-secret profile profile1 algorithm sha-1 level-1
-   isis authentication mode shared-secret profile profile1 algorithm md5 level-2
+   description isis authentication both l1 l2 md5 rx
+   authentication mode md5 rx-disabled level-1
+   authentication mode md5 rx-disabled level-2
 !
 interface Vlan347
-   description isis authentication shared-secret2
-   isis authentication mode shared-secret profile profile-both algorithm md5 rx-disabled
+   description isis authentication l1 l2 md5
+   authentication mode md5 level-1
+   authentication mode md5 level-2
 !
 interface Vlan348
-   description isis authentication shared-secret3
-   isis authentication mode shared-secret profile profile-both algorithm sha-256
+   description isis authentication l1 l2 shared secret
+   authentication mode shared-secret profile profile1 algorithm sha-256 level-1
+   authentication mode shared-secret profile profile1 algorithm sha-256 level-2
+!
+interface Vlan349
+   description isis authentication l1 l2 shared secret rx
+   authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-1
+   authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-2
+!
+interface Vlan350
+   description isis authentication l1 l2 sha rx
+   authentication mode sha key-id 5 rx-disabled level-1
+   authentication mode sha key-id 5 rx-disabled level-2
+!
+interface Vlan351
+   description isis authentication l1 l2 sha
+   authentication mode sha key-id 5 level-1
+   authentication mode sha key-id 5 level-2
 !
 interface Vlan501
    description SVI Description
