--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,6 +79,8 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
+        args:
+          - --fix
       # Run the formatter.
       - id: ruff-format
 
