Adding feature_header_lentgh and re_encapsulation_ethernet_header for switchport.tap.encapsulation.gre

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -77,6 +77,13 @@ ethernet_interfaces:
             - strip: true
               destination: 2.1.1.3
               source: 2.1.1.4
+            - strip: true
+              protocol: "0x0002"
+              feature_header_length: 3
+            - strip: true
+              protocol: "0x0003"
+              feature_header_length: 2
+              re_encapsulation_ethernet_header: true
       tool:
         mpls_pop_all: true
         encapsulation:
