--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
@@ -21,6 +21,23 @@ vlan_interfaces:
     isis_enable: "EVPN_UNDERLAY"
     isis_bfd: true
     ip_verify_unicast_source_reachable_via: rx
+    # Test isis authentication both md5 rx
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+      level_1:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+      level_2:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
 
   - name: Vlan81
     description: IPv6 Virtual Address
@@ -39,6 +56,12 @@ vlan_interfaces:
     ip_address_virtual_secondaries:
       - 10.11.83.1/24
       - 10.11.84.1/24
+    # Test isis auth both md5
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: md5
 
   - name: Vlan84
     description: SVI Description
@@ -48,6 +71,15 @@ vlan_interfaces:
       - 10.11.84.254/24
     arp_gratuitous_accept: true
     arp_monitor_mac_address: true
+    # Test isis auth both sha rx
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: sha
+        sha:
+          key_id: 2
+        rx_disabled: true
 
   - name: Vlan85
     description: SVI Description
@@ -58,6 +90,14 @@ vlan_interfaces:
       interval: 500
       min_rx: 500
       multiplier: 5
+    # Test isis auth both sha
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: sha
+        sha:
+          key_id: 2
 
   - name: Vlan86
     description: SVI Description
@@ -65,6 +105,14 @@ vlan_interfaces:
     ip_attached_host_route_export:
       enabled: true
       distance: 10
+    # Test isis auth both shared secret rx
+    isis_authentication:
+      both:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-1
+        rx_disabled: true
 
   - name: Vlan87
     description: SVI Description
@@ -72,11 +120,30 @@ vlan_interfaces:
     ip_address: 10.10.87.1/24
     access_group_in: ACL_IN
     access_group_out: ACL_OUT
+    # Test isis auth both shared secret
+    isis_authentication:
+      both:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-1
 
   - name: Vlan88
     description: SVI Description
     shutdown: true
     ip_address_virtual: 10.10.87.1/23
+    # Test isis auth both l1l2 md5 rx
+    isis_authentication:
+      level_1:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+      level_2:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
 
   - name: Vlan91
     description: PBR Description
@@ -84,18 +151,54 @@ vlan_interfaces:
     service_policy:
       pbr:
         input: MyServicePolicy
+    # Test isis auth l1l2 md5
+    isis_authentication:
+      level_1:
+        key_type: 0
+        key: password
+        mode: md5
+      level_2:
+        key_type: 0
+        key: password
+        mode: md5
 
   - name: Vlan90
     description: SVI Description
     ip_address: 10.10.83.1/24
     ip_attached_host_route_export:
       enabled: true
+    # Test isis auth l1l2 shared secret
+    isis_authentication:
+      level_1:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-256
+      level_2:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-256
 
   - name: Vlan92
     description: SVI Description
     ip_address: 10.10.92.1/24
     ip_proxy_arp: true
     ip_directed_broadcast: true
+    # Test isis auth l1l2 shared secret rx
+    isis_authentication:
+      level_1:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-256
+        rx_disabled: true
+      level_2:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-256
+        rx_disabled: true
 
 # MCAST Configuration
 
@@ -113,6 +216,18 @@ vlan_interfaces:
         hello:
           count: 3.5
           interval: 10
+    # Test isis auth l1l2 sha rx
+    isis_authentication:
+      level_1:
+        mode: sha
+        sha:
+          key_id: 5
+        rx_disabled: true
+      level_2:
+        mode: sha
+        sha:
+          key_id: 5
+        rx_disabled: true
 
 # Helpers on SVI
 
@@ -161,6 +276,16 @@ vlan_interfaces:
         source_interface: Loopback0
       - ip_helper: 10.10.64.150
         source_interface: Loopback0
+    # Test isis auth l1l2 sha
+    isis_authentication:
+      level_1:
+        mode: sha
+        sha:
+          key_id: 5
+      level_2:
+        mode: sha
+        sha:
+          key_id: 5
 
   - name: Vlan43
     description: SVI Description
@@ -171,6 +296,51 @@ vlan_interfaces:
         vrf: TEST
         local_interface: Loopback44
         link_address: a0::4
+    isis_authentication:
+      both:
+        key_ids:
+          - id: 2
+            algorithm: sha-512
+            key_type: 0
+            key: password
+            rfc_5310: false
+          - id: 3
+            algorithm: sha-512
+            key_type: 0
+            key: password1
+            rfc_5310: true
+      level_1:
+        key_ids:
+          - id: 1
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: false
+          - id: 4
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: true
+          - id: 3
+            algorithm: sha-1
+            key_type: 0
+            key: password3
+      level_2:
+        key_ids:
+          - id: 1
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: false
+          - id: 5
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: true
+          - id: 3
+            algorithm: sha-1
+            key_type: 0
+            key: password2
 
   - name: Vlan44
     description: SVI Description
@@ -460,152 +630,3 @@ vlan_interfaces:
       dynamic_capacity: 900
       expire: 250
       refresh_always: true
-
-  - name: Vlan340
-    description: isis authentication both md5 rx
-    isis_authentication:
-      both:
-        key_type: 0
-        key: password
-        mode: md5
-        rx_disabled: true
-      level_1:
-        key_type: 0
-        key: password
-        mode: md5
-        rx_disabled: true
-      level_2:
-        key_type: 0
-        key: password
-        mode: md5
-        rx_disabled: true
-
-  - name: Vlan341
-    description: isis authentication both md5
-    isis_authentication:
-      both:
-        key_type: 0
-        key: password
-        mode: md5
-
-  - name: Vlan342
-    description: isis authentication both sha rx
-    isis_authentication:
-      both:
-        key_type: 0
-        key: password
-        mode: sha
-        sha:
-          key_id: 2
-        rx_disabled: true
-
-  - name: Vlan343
-    description: isis authentication both sha
-    isis_authentication:
-      both:
-        key_type: 0
-        key: password
-        mode: sha
-        sha:
-          key_id: 2
-
-  - name: Vlan344
-    description: isis authentication both shared secret rx
-    isis_authentication:
-      both:
-        mode: shared-secret
-        shared_secret:
-          profile: profile1
-          algorithm: sha-1
-        rx_disabled: true
-
-  - name: Vlan345
-    description: isis authentication both shared secret
-    isis_authentication:
-      both:
-        mode: shared-secret
-        shared_secret:
-          profile: profile1
-          algorithm: sha-1
-
-  - name: Vlan346
-    description: isis authentication both l1 l2 md5 rx
-    isis_authentication:
-      level_1:
-        key_type: 0
-        key: password
-        mode: md5
-        rx_disabled: true
-      level_2:
-        key_type: 0
-        key: password
-        mode: md5
-        rx_disabled: true
-
-  - name: Vlan347
-    description: isis authentication l1 l2 md5
-    isis_authentication:
-      level_1:
-        key_type: 0
-        key: password
-        mode: md5
-      level_2:
-        key_type: 0
-        key: password
-        mode: md5
-
-  - name: Vlan348
-    description: isis authentication l1 l2 shared secret
-    isis_authentication:
-      level_1:
-        mode: shared-secret
-        shared_secret:
-          profile: profile1
-          algorithm: sha-256
-      level_2:
-        mode: shared-secret
-        shared_secret:
-          profile: profile1
-          algorithm: sha-256
-
-  - name: Vlan349
-    description: isis authentication l1 l2 shared secret rx
-    isis_authentication:
-      level_1:
-        mode: shared-secret
-        shared_secret:
-          profile: profile1
-          algorithm: sha-256
-        rx_disabled: true
-      level_2:
-        mode: shared-secret
-        shared_secret:
-          profile: profile1
-          algorithm: sha-256
-        rx_disabled: true
-
-  - name: Vlan350
-    description: isis authentication l1 l2 sha rx
-    isis_authentication:
-      level_1:
-        mode: sha
-        sha:
-          key_id: 5
-        rx_disabled: true
-      level_2:
-        mode: sha
-        sha:
-          key_id: 5
-        rx_disabled: true
-
-  - name: Vlan351
-    description: isis authentication l1 l2 sha
-    isis_authentication:
-      level_1:
-        mode: sha
-        sha:
-          key_id: 5
-      level_2:
-        mode: sha
-        sha:
-          key_id: 5
