fix default for eos_cli_config_gen

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/defaults/main/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/defaults/main/main.yml
@@ -1,3 +1,6 @@
 # Roles Defaults - main
 
 avd_structured_config_file_format: "yml"
+
+# Input Variable Validation
+avd_data_validation_mode: "error"
