updated the j2 template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
@@ -41,7 +41,7 @@ traffic-policies
          source prefix 10.0.0.0/8 192.168.0.0/16
          destination prefix field-set DEMO-01
          protocol tcp source port 1,10-20
-         protocol udp flags initial source port field-set SERVICE-DEMO
+         protocol udp source port field-set SERVICE-DEMO
          ttl 10, 20-30
          actions
             set traffic class 5
@@ -49,7 +49,8 @@ traffic-policies
       !
       match BLUE-C1-POLICY-02 ipv4
          source prefix field-set DEMO-01 DEMO-02
-         protocol tcp flags established destination port field-set SERVICE-DEMO
+         protocol tcp flags established
+         protocol tcp destination port field-set SERVICE-DEMO
          protocol icmp
          actions
             count DEMO-TRAFFIC
@@ -69,7 +70,8 @@ traffic-policies
       match BLUE-C1-POLICY-04 ipv4
          source prefix field-set DEMO-02
          destination prefix field-set DEMO-01
-         protocol tcp flags established source port 22
+         protocol tcp flags established
+         protocol tcp source port 22
          protocol icmp
          actions
             set traffic class 5
@@ -87,7 +89,8 @@ traffic-policies
       match BLUE-C1-POLICY-06 ipv4
          protocol neighbors bgp
          protocol udp destination port 1,10-20
-         protocol tcp flags initial source port 22
+         protocol tcp flags established
+         protocol tcp source port 22
          protocol icmp
          !
       !
@@ -98,7 +101,7 @@ traffic-policies
       match BLUE-C1-POLICY-08 ipv4
          destination prefix 10.0.0.0/8 192.168.0.0/16
          destination prefix field-set DEMO-01
-         protocol udp flags initial destination port 1,10-20
+         protocol udp destination port 1,10-20
          protocol tcp destination port field-set SERVICE-DEMO
          !
       !
