fix the covergae and porting guide

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/traffic-policies.cfg
@@ -88,7 +88,7 @@ traffic-policies
       !
       match BLUE-C1-POLICY-06 ipv4
          protocol neighbors bgp
-         protocol udp destination port 1,10-20
+         protocol udp source port 22 destination port 1,10-20
          protocol tcp flags established
          protocol tcp source port 22
          protocol icmp
@@ -102,7 +102,7 @@ traffic-policies
          destination prefix 10.0.0.0/8 192.168.0.0/16
          destination prefix field-set DEMO-01
          protocol udp destination port 1,10-20
-         protocol tcp destination port field-set SERVICE-DEMO
+         protocol tcp source port field-set SERVICE-DEMO-SRC destination port field-set SERVICE-DEMO-DST
          !
       !
       match ipv4-all-default ipv4
